--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,15 @@ services:
   ftp-server:
     container_name: ftp_container
     environment:
-      - FTP_PASS=${FTP_PASS}
-      - FTP_USER=${FTP_USER}
-    image: garethflowers/ftp-server
+      - USERS=${FTP_INFO}
+      - ADDRESS=${SERVER_ADDR}
+    image: delfer/alpine-ftp-server
     ports:
-      - "20-21:20-21/tcp"
-      - "40000-40009:40000-40009/tcp"
+      - "21:21"
+      - "21000-21010:21000-21010"
     volumes:
-      - "./data:/home/${FTP_USER}"
+      - "./data:/home/user/${FTP_USER}"
+    restart: always
   nginx:
     image: nginx:alpine
     container_name: ftp_webserver
